Leave request overview done

--- a/Dashboards/Admin/Pages/Assets/scss/material-dashboard/variables/_cards-extend.scss
+++ b/Dashboards/Admin/Pages/Assets/scss/material-dashboard/variables/_cards-extend.scss
@@ -1,4 +1,4 @@
-// Card Profile
+// Card EmployeesProfile
 $card-profile-body-text-align:      center !default;
 $card-profile-body-padding:         1.25rem 2rem !default;
 $card-profile-avatar-margin:        0 auto !default;
